--- a/src/app/poes/component/poe-add-remove-stagiaire/poe-add-remove-stagiaire.component.html
+++ b/src/app/poes/component/poe-add-remove-stagiaire/poe-add-remove-stagiaire.component.html
@@ -1,32 +1,22 @@
 <!--AJOUTER FONCTIONALITES DE TRI-->
 <ng-container *ngIf="stagiaires">
-    <ng-container *ngIf="poe" >
+  <ng-container *ngIf="poe">
+    <p>ajouter ou supprimer des stagiaires de la Poe : {{ poe.title }}</p>
+    <p></p>
+    <!-- TODO AFFICHER DETAIL POE-->
+    <ng-container *ngFor="let stagiaire of stagiaires">
+      <p>
+        {{ stagiaire.firstName }} {{ stagiaire.lastName }} -
+        {{ stagiaire.poe.title }}
+      </p>
 
-        <p>
-            ajouter ou supprimer des stagiaires de la Poe :  {{poe.title}}    
+      <ng-container *ngIf="stagiaire.poe.id != poe.id">
+        <button class="button" (click)="onAdd(stagiaire.id)">add</button>
+      </ng-container>
 
-        </p>
-        <p>
-
-        </p>
-<!-- TODO AFFICHER DETAIL POE-->
-        <ng-container *ngFor="let stagiaire of stagiaires">
-            <p>{{stagiaire.firstName}}  {{stagiaire.lastName}} {{stagiaire.poe.id}} </p>
-
-
-            <ng-container *ngIf="stagiaire.poe.id !=poe.id">
-                <button class="button" (click)="onAdd(stagiaire.id)">
-                    add
-
-                </button>
-            </ng-container>
-
-            <ng-container *ngIf="!(stagiaire.poe.id!=poe.id)">
-                <button class="button" (click)="onRemove(stagiaire.id)">
-                    remove
-                </button>
-            </ng-container>
-
-        </ng-container>
+      <ng-container *ngIf="!(stagiaire.poe.id != poe.id)">
+        <button class="button" (click)="onRemove(stagiaire.id)">remove</button>
+      </ng-container>
     </ng-container>
+  </ng-container>
 </ng-container>
