--- a/src/app/poes/component/list/list.component.html
+++ b/src/app/poes/component/list/list.component.html
@@ -1,85 +1,38 @@
 <body>
-  <div id="leftpanel">
-    <div id="title">
-      <p>> MENU</p>
-    </div>
-
-    <div>
-      <ul class="menu-list">
-        <div class="menu-item">
-          <button class="menu-button">• &nbsp;&nbsp;Formations</button>
-          <ul class="menu-sub-list">
-            <div class="menu-item">
-              <button class="menu-button">Panorama</button>
-            </div>
-            <div class="menu-item">
-              <button class="menu-button" (click)="goToPOESList()">
-                Liste
-              </button>
-            </div>
-          </ul>
-        </div>
-        <div class="menu-item">
-          <button class="menu-button">• &nbsp;&nbsp;Participants</button>
-          <ul class="menu-sub-list">
-            <div class="menu-item">
-              <button class="menu-button">Panorama</button>
-            </div>
-            <div class="menu-item">
-              <button class="menu-button" (click)="goToTraineesList()">
-                Liste
-              </button>
-            </div>
-          </ul>
-        </div>
-        <div class="menu-item">
-          <button class="menu-button">• &nbsp;&nbsp;Ajouter</button>
-          <ul class="menu-sub-list">
-            <div class="menu-item">
-              <button class="menu-button" (click)="goToPOESAdd()">
-                Formation
-              </button>
-            </div>
-            <div class="menu-item">
-              <button class="menu-button" (click)="goToTraineesAdd()">
-                Participant
-              </button>
-            </div>
-          </ul>
-        </div>
-        <div class="menu-item">
-          <button class="menu-button">• &nbsp;&nbsp;Statistiques</button>
-        </div>
-        <div class="menu-item">
-          <button class="menu-button">• &nbsp;&nbsp;Archives</button>
-        </div>
-      </ul>
-    </div>
-  </div>
-
-
-  <br>
-  <br>
-  <br>
-  <br>
-  <div id="headline">
-    <p>Liste des formations</p>
-  </div>
-  <br>
+  <br />
+  <br />
+  <br />
+  <br />
+  <div id="headline">Liste des formations</div>
+  <br />
 
   <div id="topbuttons">
     <br />
     <br />
 
-    <button type="button" (click)="showLi = 'All'" [ngClass]="{ 'is-selected': showLi === 'All' }">
+    <button
+      type="button"
+      (click)="showLi = 'All'"
+      [ngClass]="{ 'is-selected': showLi === 'All' }"
+    >
       Tous
     </button>
 
-    <button type="button" class="poei" (click)="showLi = 'POEI'" [ngClass]="{ 'is-selected': showLi === 'POEI' }">
+    <button
+      type="button"
+      class="poei"
+      (click)="showLi = 'POEI'"
+      [ngClass]="{ 'is-selected': showLi === 'POEI' }"
+    >
       POEI
     </button>
 
-    <button type="button" class="poec" (click)="showLi = 'POEC'" [ngClass]="{ 'is-selected': showLi === 'POEC' }">
+    <button
+      type="button"
+      class="poec"
+      (click)="showLi = 'POEC'"
+      [ngClass]="{ 'is-selected': showLi === 'POEC' }"
+    >
       POEC
     </button>
 
@@ -90,43 +43,54 @@
   <table>
     <thead>
       <tr>
-        <th style="width: 80px;">&nbsp;</th>
-        <th style="width: 460px;">Intitulé</th>
-        <th style="width: 120px;">Début</th>
-        <th style="width: 120px;">Fin</th>
-        <th style="text-align: right; width: 160px;">{{ getDisplayRowsNumber() }}/{{ poes.length }}</th>
+        <th style="width: 80px">&nbsp;</th>
+        <th style="width: 460px">Intitulé</th>
+        <th style="width: 120px">Début</th>
+        <th style="width: 120px">Fin</th>
+        <th style="text-align: right; width: 160px">
+          {{ getDisplayRowsNumber() }}/{{ poes.length }}
+        </th>
       </tr>
     </thead>
 
     <tbody>
       <ng-container *ngFor="let poe of poes">
         <tr *ngIf="showLi === 'All' || poe.poeType === showLi">
-          <td style="width: 80px;">
-            <span (click)="goToDetail(poe.id)" [ngClass]=" {
+          <td style="width: 80px">
+            <span
+              (click)="goToDetail(poe.id)"
+              [ngClass]="{
                 bubble: true,
                 poei: poe.poeType === 'POEI',
                 poec: poe.poeType === 'POEC'
-              }">
+              }"
+            >
               {{ poe.poeType }}
             </span>
           </td>
-          <td style="width: 460px;">
+          <td style="width: 460px">
             {{ poe.title | uppercase }}
           </td>
-          <td style="width: 120px;">
+          <td style="width: 120px">
             {{ poe.beginDate | date : "dd/MM/YYYY" }}
           </td>
-          <td style="width: 120px;">
+          <td style="width: 120px">
             {{ poe.endDate | date : "dd/MM/YYYY" }}
           </td>
 
-
-          <td style="width: 160px;">
-            <button nmat-mini-flat class="material-icons style" (click)="openModal(template)">
+          <td style="width: 160px">
+            <button
+              nmat-mini-flat
+              class="material-icons style"
+              (click)="openModal(template)"
+            >
               <mat-icon>delete</mat-icon>
             </button>
             <ng-template #template>
-              <div class="modal-body text-center" style="background-color: white; border-radius: 0.4em">
+              <div
+                class="modal-body text-center"
+                style="background-color: white; border-radius: 0.4em"
+              >
                 <p style="font-size: 22px">Confirmer la suppression ?</p>
                 <button type="button" class="delete" (click)="confirm(poe)">
                   Supprimer
@@ -134,9 +98,14 @@
                 <button type="button" (click)="decline()">Annuler</button>
               </div>
             </ng-template>
-            <button mat-mini-flat class="material-icons style2" (click)="goToUpdate(poe.id)">
+            <button
+              mat-mini-flat
+              class="material-icons style2"
+              (click)="goToUpdate(poe.id)"
+            >
               <mat-icon>edit</mat-icon>
             </button>
+          </td>
         </tr>
       </ng-container>
     </tbody>
