--- a/src/app/shared/formulaire-add-general/formulaire-add-general.component.scss
+++ b/src/app/shared/formulaire-add-general/formulaire-add-general.component.scss
@@ -1,254 +1,52 @@
-/**
-* SCSS Rules
-**/
-
-
 #headline {
-    font-family: arial, sans-serif;
-    text-align: left;
-    font-size: 26px;
-    font-weight: bolder;
-    color: #2D3041;
-    position: fixed;
-    left: 500px;
-    top: 100px;
-  }
-
-.menu-list {
-    margin: 0;
-    display: block;
-    width: 100%;
-    padding: 8px;
+  font-family: arial, sans-serif;
+  text-align: left;
+  font-size: 26px;
+  font-weight: bolder;
+  color: #2d3041;
+  position: fixed;
+  left: 500px;
+  top: 100px;
 }
-
-.menu-sub-list {
-    display: none;
-    padding: 16px;
-    border-radius: 10px;
-    left: 100%;
-    right: 0;
-    z-index: 100;
-    width: 100%;
-    top: 0;
-    flex-direction: column;
-
-    &:hover {
-        display: flex;
-    }
-}
-
-.menu-item {
-    position: relative;
-}
-
-@keyframes coolAppear {
-    0% {
-        background-color: #2D3041, 80%;
-    }
-
-    50% {
-        background-color: #2D3041, 40%;
-    }
-
-    100% {
-        background-color: white;
-        color: #2D3041;
-        border: 3px solid;
-        border-color: #2D3041;
-    }
-}
-
-
-.menu-button {
-    cursor: pointer;
-    font-family: arial, sans-serif;
-    font-size: 20px;
-    text-align: left;
-    text-indent: 16px;
-    border: none;
-    background-color: #9698A0;
-    color: white;
-    border-radius: .4em;
-    width: 220px;
-    height: 42px;
-    margin: 5px 0px 5px 0px;
-
-    &:hover {
-        background-color: #2D3041;
-        color: white;
-    }
-
-    &:focus {
-        color: #2D3041;
-        border: 4px solid;
-        border-color: #2D3041;
-        animation: coolAppear 0.35s ease-in 0s 1 forwards;
-
-        &+.menu-sub-list {
-            display: flex;
-        }
-
-        svg {
-            stroke: var(--color-text-primary);
-        }
-    }
-
-    svg {
-        flex-shrink: 0;
-        width: 20px;
-        height: 20px;
-        margin-right: 10px;
-        stroke: var(--color-text-primary-offset);
-
-        &:nth-of-type(2) {
-            margin-right: 0;
-            position: absolute;
-        }
-    }
-
-    &:active {
-        background-color: #2D3041;
-        color: white;
-    }
-}
-
-#title {
-    font-family: arial, sans-serif;
-    text-align: center;
-    font-size: 26px;
-    font-weight: bolder;
-    color: #2D3041;
-    width: 260px;
-    height: 42px;
-    margin: 25px 0px 0px 0px;
-}
-
-#leftpanel {
-    float: right;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: left;
-    align-items: flex-start;
-    align-content: flex-start;
-    height: 360px;
-    width: 300px;
-    border-radius: .4em;
-    left: 150px;
-    top:150px;
-    position: fixed;
-}
-
 
 ::ng-deep .mat-form-field-underline {
-    display: none;
+  display: none;
 }
 
 ::ng-deep .mat-focused .mat-form-field-label {
-    color: #2D3041 !important;
+  color: #2d3041 !important;
 }
 
 ::ng-deep .mat-focused .mat-form-field-outline {
-    color: #2D3041 !important;
+  color: #2d3041 !important;
 }
 
 button {
-    cursor: pointer;
-    font-family: arial, sans-serif;
-    font-size: 18px;
-    border: 3px solid;
-    border-color: #00000000;
-    background-color: #9698A0;
-    color: white;
-    border-radius: .4em;
-    width: 100px;
-    height: 32px;
+  cursor: pointer;
+  font-family: arial, sans-serif;
+  font-size: 18px;
+  border: 3px solid;
+  border-color: #00000000;
+  background-color: #9698a0;
+  color: white;
+  border-radius: 0.4em;
+  width: 100px;
+  height: 32px;
 
-    &.mat-raised-button {
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        box-shadow: none;
-    }
-
-    &:hover {
-        background-color: #2D3041;
-        color: white;
-    }
-
-    &:focus {
-        color: white;
-        animation: coolAppear 0.35s ease-in 0s 1 forwards;
-    }
-}
-
-.button2 {
-    cursor: pointer;
-    border: none; // No border
-    background-color: #9698A0;
-    color: white;
-    border-radius: .4em;
-    width: 100px;
-    height: 32px;
-    margin: 5px 5px 5px 5px;
-
-    &:hover {
-        background-color: #2D3041;
-        color: white;
-    }
-
-    &:focus {
-        color: white;
-        border: 3px solid;
-        border-color: #2D3041;
-        background-color: white;
-        animation: coolAppear 0.35s ease-in 0s 1 forwards;
-    }
+  &:hover {
+    background-color: #2d3041;
+  }
 }
 
 .formblock {
-    font-family: arial, sans-serif;
-    font-size: 20px;
-    height: auto;
-    border-collapse: collapse;
-    margin-left: 500px;
-    margin-right: auto;
-    margin-top: 32px;
-    width: 960px;
-    color: #2D3041;
-    position: fixed;
-}
-
-a {
-    &.btn {
-        display: block;
-        text-decoration: none;
-        padding: .5em;
-        border-radius: .25em;
-        width: 5em;
-        margin: 0 auto;
-        text-align: center;
-        text-transform: uppercase;
-    }
-}
-
-.cd-popup {
-    position: fixed;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(94, 110, 141, 0.9);
-    opacity: 0;
-    visibility: hidden;
-    -webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
-    -moz-transition: opacity 0.3s 0s, visibility 0s 0.3s;
-    transition: opacity 0.3s 0s, visibility 0s 0.3s;
-}
-
-.cd-popup.is-visible {
-    opacity: 1;
-    visibility: visible;
-    -webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
-    -moz-transition: opacity 0.3s 0s, visibility 0s 0s;
-    transition: opacity 0.3s 0s, visibility 0s 0s;
+  font-family: arial, sans-serif;
+  font-size: 20px;
+  height: auto;
+  border-collapse: collapse;
+  margin-left: 500px;
+  margin-right: auto;
+  margin-top: 32px;
+  width: 960px;
+  color: #2d3041;
+  position: fixed;
 }
