--- a/src/app/stagiaires/list/list.component.scss
+++ b/src/app/stagiaires/list/list.component.scss
@@ -1,140 +1,12 @@
-/**
-* SCSS Rules
-**/
-
 #headline {
   font-family: arial, sans-serif;
   text-align: left;
   font-size: 26px;
   font-weight: bolder;
-  color: #2D3041;
+  color: #2d3041;
   position: fixed;
   left: 500px;
   top: 100px;
-}
-
-.menu-list {
-  margin: 0;
-  display: block;
-  width: 100%;
-  padding: 8px;
-}
-
-.menu-sub-list {
-  display: none;
-  padding: 16px;
-  border-radius: 10px;
-  left: 100%;
-  right: 0;
-  z-index: 100;
-  width: 100%;
-  top: 0;
-  flex-direction: column;
-
-  &:hover {
-    display: flex;
-  }
-}
-
-.menu-item {
-  position: relative;
-}
-
-@keyframes coolAppear {
-  0% {
-    background-color: #2D3041, 80%;
-  }
-
-  50% {
-    background-color: #2D3041, 40%;
-  }
-
-  100% {
-    background-color: white;
-    color: #2D3041;
-    border: 3px solid;
-    border-color: #2D3041;
-  }
-}
-
-
-.menu-button {
-  cursor: pointer;
-  font-family: arial, sans-serif;
-  font-size: 20px;
-  text-align: left;
-  text-indent: 16px;
-  border: none;
-  background-color: #9698A0;
-  color: white;
-  border-radius: .4em;
-  width: 220px;
-  height: 42px;
-  margin: 5px 0px 5px 0px;
-
-  &:hover {
-    background-color: #2D3041;
-    color: white;
-  }
-
-  &:focus {
-    color: #2D3041;
-    border: 4px solid;
-    border-color: #2D3041;
-    animation: coolAppear 0.35s ease-in 0s 1 forwards;
-
-    &+.menu-sub-list {
-      display: flex;
-    }
-
-    svg {
-      stroke: var(--color-text-primary);
-    }
-  }
-
-  svg {
-    flex-shrink: 0;
-    width: 20px;
-    height: 20px;
-    margin-right: 10px;
-    stroke: var(--color-text-primary-offset);
-
-    &:nth-of-type(2) {
-      margin-right: 0;
-      position: absolute;
-    }
-  }
-
-  &:active {
-    background-color: #2D3041;
-    color: white;
-  }
-}
-
-#title {
-  font-family: arial, sans-serif;
-  text-align: center;
-  font-size: 26px;
-  font-weight: bolder;
-  color: #2D3041;
-  width: 260px;
-  height: 42px;
-  margin: 25px 0px 0px 0px;
-}
-
-#leftpanel {
-  float: right;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: left;
-  align-items: flex-start;
-  align-content: flex-start;
-  height: 360px;
-  width: 300px;
-  border-radius: .4em;
-  left: 150px;
-  top: 150px;
-  position: fixed;
 }
 
 #topbuttons {
@@ -142,56 +14,37 @@
   margin-right: auto;
   width: 600px;
   position: fixed;
-
 }
 
 .material-icons.style {
   cursor: pointer;
   color: white;
-  background-color: #2D3041;
-  border-radius: .4em;
+  background-color: #2d3041;
+  border-radius: 0.4em;
   width: 50px;
   height: 50px;
   margin: 10px 5px 10px 5px;
   float: right;
 
-
   &:hover {
     background-color: red;
     color: white;
-  }
-
-  &:focus {
-    color: white;
-    border: 3px solid;
-    border-color: #2D3041;
-    background-color: red;
-    animation: coolAppear 0.35s ease-in 0s 1 forwards;
   }
 }
 
 .material-icons.style2 {
   cursor: pointer;
   color: white;
-  background-color: #9698A0;
-  border-radius: .4em;
+  background-color: #9698a0;
+  border-radius: 0.4em;
   width: 50px;
   height: 50px;
   margin: 10px 5px 10px 5px;
   float: right;
 
-
   &:hover {
-    background-color: #2D3041;
+    background-color: #2d3041;
     color: white;
-  }
-
-  &:focus {
-    color: #2D3041;
-    border: 3px solid;
-    border-color: #2D3041;
-    background-color: white;
-    animation: coolAppear 0.35s ease-in 0s 1 forwards;
   }
 }
 
@@ -201,68 +54,33 @@ button {
   font-size: 18px;
   border: 3px solid;
   border-color: #00000000;
-  background-color: #9698A0;
+  background-color: #9698a0;
   color: white;
-  border-radius: .4em;
+  border-radius: 0.4em;
   width: 100px;
   height: 32px;
   margin: 10px 5px 10px 5px;
 
   &.woman {
-    background-color: #CF1B6D;
-    color: white;
+    background-color: #cf1b6d;
   }
 
   &.man {
-    background-color: #25AAE1;
-    color: white;
+    background-color: #25aae1;
   }
 
   &.other {
-    background-color: #EC851D;
-    color: white;
+    background-color: #ec851d;
   }
 
   &.delete {
     background-color: red;
-    color: white;
   }
 
   &:hover {
-    background-color: #2D3041;
-    color: white;
-  }
-
-  &:focus {
-    color: white;
-    animation: coolAppear 0.35s ease-in 0s 1 forwards;
+    background-color: #2d3041;
   }
 }
-
-.button2 {
-  cursor: pointer;
-  border: none; // No border
-  background-color: #9698A0;
-  color: white;
-  border-radius: .4em;
-  width: 100px;
-  height: 32px;
-  margin: 5px 5px 5px 5px;
-
-  &:hover {
-    background-color: #2D3041;
-    color: white;
-  }
-
-  &:focus {
-    color: white;
-    border: 3px solid;
-    border-color: #2D3041;
-    background-color: white;
-    animation: coolAppear 0.35s ease-in 0s 1 forwards;
-  }
-}
-
 
 table {
   font-family: arial, sans-serif;
@@ -271,36 +89,34 @@ table {
   margin-left: 500px;
   margin-right: auto;
   width: 960px;
-  color: #2D3041;
+  color: #2d3041;
   table-layout: fixed;
   border-collapse: collapse;
   margin-top: 120px;
   text-align: left;
-  
 
   ::-webkit-scrollbar {
     width: 20px;
     height: 10px;
-
   }
 
   ::-webkit-scrollbar-track {
     border-right: 3px solid;
     border-top: 3px solid;
     border-bottom: 3px solid;
-    border-color: #F4F4F4;
-    border-top-right-radius: .4em;
-    border-bottom-right-radius: .4em;
-    background-color: #F4F4F4;
+    border-color: #f4f4f4;
+    border-top-right-radius: 0.4em;
+    border-bottom-right-radius: 0.4em;
+    background-color: #f4f4f4;
   }
 
   ::-webkit-scrollbar-thumb {
-    background-color: #9698A0;
-    border-top-right-radius: .4em;
-    border-bottom-right-radius: .4em;
+    background-color: #9698a0;
+    border-top-right-radius: 0.4em;
+    border-bottom-right-radius: 0.4em;
 
     &:hover {
-      background-color: #2D3041;
+      background-color: #2d3041;
       color: white;
     }
   }
@@ -314,19 +130,18 @@ table {
   }
 
   th {
-    color: #2D3041;
+    color: #2d3041;
     background-color: white;
     width: 960px;
   }
 
   tbody {
     text-align: left;
-    color: #2D3041;
+    color: #2d3041;
     display: block;
     overflow: auto;
     height: 500px;
     width: 960px;
-
   }
 
   td {
@@ -339,19 +154,19 @@ table {
         width: 50px;
         height: 50px;
         margin-left: 5px;
-        border-radius: .4em;
+        border-radius: 0.4em;
         line-height: 50px;
         vertical-align: middle;
         text-align: center;
         font-weight: bolder;
-        color: #2D3041;
+        color: #2d3041;
 
         &.male {
-          background-color: #25AAE1;
+          background-color: #25aae1;
           color: white;
 
           &:hover {
-            background-color: #2D3041;
+            background-color: #2d3041;
             color: white;
           }
 
@@ -362,11 +177,11 @@ table {
         }
 
         &.female {
-          background-color: #CF1B6D;
+          background-color: #cf1b6d;
           color: white;
 
           &:hover {
-            background-color: #2D3041;
+            background-color: #2d3041;
             color: white;
           }
 
@@ -377,11 +192,11 @@ table {
         }
 
         &.other {
-          background-color: #EC851D;
+          background-color: #ec851d;
           color: white;
 
           &:hover {
-            background-color: #2D3041;
+            background-color: #2d3041;
             color: white;
           }
 
@@ -392,56 +207,19 @@ table {
         }
       }
     }
-
   }
-
 
   tfoot {
     font-weight: bolder;
-    color: #2D3041;
+    color: #2d3041;
   }
 
   tr:nth-child(odd) {
-    color: #2D3041;
-    background-color: #F4F4F4;
+    color: #2d3041;
+    background-color: #f4f4f4;
   }
 
   tr:nth-child(even) {
-    color: #2D3041;
+    color: #2d3041;
   }
-}
-
-a {
-  &.btn {
-    display: block;
-    text-decoration: none;
-    padding: .5em;
-    border-radius: .25em;
-    width: 5em;
-    margin: 0 auto;
-    text-align: center;
-    text-transform: uppercase;
-  }
-}
-
-.cd-popup {
-  position: fixed;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(94, 110, 141, 0.9);
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
-  -moz-transition: opacity 0.3s 0s, visibility 0s 0.3s;
-  transition: opacity 0.3s 0s, visibility 0s 0.3s;
-}
-
-.cd-popup.is-visible {
-  opacity: 1;
-  visibility: visible;
-  -webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
-  -moz-transition: opacity 0.3s 0s, visibility 0s 0s;
-  transition: opacity 0.3s 0s, visibility 0s 0s;
 }
