--- a/src/app/stagiaires/detail/detail.component.scss
+++ b/src/app/stagiaires/detail/detail.component.scss
@@ -28,9 +28,9 @@
   border-radius: 0.4em;
   width: 350px;
   height: 450px;
-  position: absolute;
-  right: 500px;
-  margin-top: 155px;
+  position: fixed;
+  left: 1100px;
+  margin-top: 150px;
 }
 
 .gender {
