ajout bouton formulaire

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -30,6 +30,12 @@
         </ul>
       </div>
       <div class="menu-item">
+        <button class="menu-button"(click)="goToSurveyList()">• &nbsp;&nbsp;Formulaire</button>
+          <div class="menu-item">
+          </div>
+
+      </div>
+      <div class="menu-item">
         <button class="menu-button">• &nbsp;&nbsp;Ajouter</button>
         <ul class="menu-sub-list">
           <div class="menu-item">
@@ -40,6 +46,11 @@
           <div class="menu-item">
             <button class="menu-button" (click)="goToTraineesAdd()">
               Participant
+            </button>
+          </div>
+          <div class="menu-item">
+            <button class="menu-button" (click)="goToPOESAdd()">
+              Formulaire
             </button>
           </div>
         </ul>
