--- a/src/app/poes/component/detail/detail.component.scss
+++ b/src/app/poes/component/detail/detail.component.scss
@@ -29,6 +29,7 @@
   height: 450px;
   position: fixed;
   left: 1100px;
+  line-height: 18px;
   margin-top: 142px;
   font-size: 18px;
   font-weight: bold;
