--- a/src/app/stagiaires/list/list.component.scss
+++ b/src/app/stagiaires/list/list.component.scss
@@ -153,7 +153,7 @@ table {
         display: inline-block;
         width: 50px;
         height: 50px;
-        margin-left: 5px;
+        margin: 10px 5px 10px 5px;
         border-radius: 0.4em;
         line-height: 50px;
         vertical-align: middle;
